--- a/Client/Pages/TransactionsOverview.razor
+++ b/Client/Pages/TransactionsOverview.razor
@@ -13,7 +13,11 @@
 <button>Profile avatar</button>
 <span>@categoryTitle > @subCategoryTitle</span>
 <h3>מבט על: "@subCategoryTitle"</h3>
-<span>תקציב: @budget</span>
+@if (!typeByCat)
+{
+    <span>תקציב: @budget</span>
+}
+
 <OptionsMenuComponent editBtnClicked="getUserCategories" deleteBtnClicked="deleteSubCatPopUp"></OptionsMenuComponent>
 @if (deleteBtnClicked)
 {
@@ -167,7 +171,7 @@
         {
             if (!filterByReturnTrans)
             {
-                <TransOverviewComponent transaction="transaction" removeTransaction="transactionDeleted" subCatID="@subCatID" userID="@userID" subCatTakenBudget="updateSubCatBudgetPostOverdraft" overdraftStatus="@overdraftStatus"></TransOverviewComponent>
+                <TransOverviewComponent transaction="transaction" removeTransaction="transactionDeleted" subCatID="@subCatID" userID="@userID" subCatTakenBudget="updateSubCatBudgetPostOverdraft" overdraftStatus="@overdraftStatus" typeByCat="@typeByCat"></TransOverviewComponent>
                 <hr />
             }
             else
@@ -175,7 +179,7 @@
                 filterStatus = "הוצאה חוזרת";
                 if (transaction.fixedMonthly==true)
                 {
-                    <TransOverviewComponent transaction="transaction" removeTransaction="transactionDeleted" subCatID="@subCatID" userID="@userID" subCatTakenBudget="updateSubCatBudgetPostOverdraft" overdraftStatus="@overdraftStatus"></TransOverviewComponent>
+                    <TransOverviewComponent transaction="transaction" removeTransaction="transactionDeleted" subCatID="@subCatID" userID="@userID" subCatTakenBudget="updateSubCatBudgetPostOverdraft" overdraftStatus="@overdraftStatus" typeByCat="@typeByCat"></TransOverviewComponent>
                     <hr/>
                 }
              
@@ -244,6 +248,8 @@
     string filterStatus="";
     string sortStatus = "";
 
+    bool typeByCat = false; //false- expense, true- income
+
     protected override async Task OnInitializedAsync()
     {
         //get category title:
@@ -274,30 +280,72 @@
             Console.WriteLine("Failed to find subcategory title. Error: " + subCatErrorContent);
         }
         //get transactions of current month:
-        var getAllTransactions = await Http.GetAsync("api/Transactions/getAllTransactions/" + subCatID);
-        if (getAllTransactions.IsSuccessStatusCode)
+        var checkCatType = await Http.GetAsync("api/Transactions/getCatType/" + userID);
+        if (checkCatType.IsSuccessStatusCode)
         {
-            var checkTransList = getAllTransactions.Content.ReadFromJsonAsync<List<TransactionOverviewToShow>>().Result;
-            if (checkTransList != null && checkTransList.Count > 0)
+            List<int> incomeSubCats = new List<int>();
+            incomeSubCats = checkCatType.Content.ReadFromJsonAsync<List<int>>().Result;
+            if (incomeSubCats.Count > 0)
             {
-                allTransactions = checkTransList;
-                foreach (TransactionOverviewToShow trans in allTransactions)
+                if (incomeSubCats.Contains(subCatID))
                 {
-                    totalSpendings += trans.transValue;
+                    typeByCat = true;
+
+                    var getAllIncomeTransactions = await Http.GetAsync("api/Transactions/getAllIncomeTransactions/" + subCatID);
+                    if (getAllIncomeTransactions.IsSuccessStatusCode)
+                    {
+                        var checkTransList = getAllIncomeTransactions.Content.ReadFromJsonAsync<List<TransactionOverviewToShow>>().Result;
+                        if (checkTransList != null && checkTransList.Count > 0)
+                        {
+                            allTransactions = checkTransList;
+                            foreach (TransactionOverviewToShow trans in allTransactions)
+                            {
+                                totalSpendings += trans.transValue;
+                            }
+                            prefilteredTransactions = checkTransList;
+                            await getSubCatTags();
+                        }
+                        else
+                        {
+                            Console.WriteLine("No transactions found related to this sub category");
+                        }
+                    }
+                    else
+                    {
+                        var transErrorContent = await getAllIncomeTransactions.Content.ReadAsStringAsync();
+                        Console.WriteLine("Failed to find transactions. Error: " + transErrorContent);
+                    }
                 }
-                prefilteredTransactions = checkTransList;
-                await getSubCatTags();
-            }
-            else
-            {
-                Console.WriteLine("No transactions found related to this sub category");
+                else //means the sub cat is related to an expense category
+                {
+                    var getAllTransactions = await Http.GetAsync("api/Transactions/getAllTransactions/" + subCatID);
+                    if (getAllTransactions.IsSuccessStatusCode)
+                    {
+                        var checkTransList = getAllTransactions.Content.ReadFromJsonAsync<List<TransactionOverviewToShow>>().Result;
+                        if (checkTransList != null && checkTransList.Count > 0)
+                        {
+                            allTransactions = checkTransList;
+                            foreach (TransactionOverviewToShow trans in allTransactions)
+                            {
+                                totalSpendings += trans.transValue;
+                            }
+                            prefilteredTransactions = checkTransList;
+                            await getSubCatTags();
+                        }
+                        else
+                        {
+                            Console.WriteLine("No transactions found related to this sub category");
+                        }
+                    }
+                    else
+                    {
+                        var transErrorContent = await getAllTransactions.Content.ReadAsStringAsync();
+                        Console.WriteLine("Failed to find transactions. Error: " + transErrorContent);
+                    }
+                }
             }
         }
-        else
-        {
-            var transErrorContent = await getAllTransactions.Content.ReadAsStringAsync();
-            Console.WriteLine("Failed to find transactions. Error: " + transErrorContent);
-        }
+
     }
     public void goToHomePage()
     {
